[package]
name = "json-mock-rust"
version = "0.1.0"
edition = "2021"
authors = ["kequandian"]
description = "A generic JSON storage service using MongoDB"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# MongoDB
mongodb = "2.8"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
